tests/ui/ast_function.stderr
error[E0505]: cannot move out of `args` because it is borrowed
  --> tests/ui/ast_function.rs:12:10
   |
10 |     let args = vec![term1, term2];
   |         ---- binding `args` declared here
11 |     let fun = ast::function(&loc, &name, &args, false).unwrap();
   |                                          ----- borrow of `args` occurs here
12 |     drop(args);
   |          ^^^^ move out of `args` occurs here
13 |     println!("{:?}", fun);
   |                      --- borrow later used here
